<resources>
    <string name="app_name">Destinatik</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google">Google</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or Register with</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_link">Send Link</string>
    <string name="desc">Don’t worry! It happens. Please enter the email associated with your account.</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="we_ve_sent_a_code_to">We’ve sent a code to</string>
    <string name="destinatik04_gmail_com">destinatik04@gmail.com</string>
    <string name="send_code_again">"Send code again : "</string>
    <string name="image">Image</string>
    <string name="times">00:20</string>
    <string name="_0">0</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="recommended">Recommended</string>
    <string name="star_icon">Star icon</string>
    <string name="_4_8">4.8</string>
    <string name="settings">Settings</string>
    <string name="you_are_looking_for_a_trip">You are looking for a trip ?</string>
    <string name="recommended_icon">Recommended Icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="back_button">Back</string>
    <string name="fav_button">Favourite Button</string>
    <string name="place">Koh Mook</string>
    <string name="trang_thailand">Trang, Thailand</string>
    <string name="rating">4.5</string>
    <string name="details">Details</string>
    <string name="descs">The third largest island in the Trang Sea is Koh Muk, which is beautiful and peaceful like a private island...</string>
    <string name="find_a_place_on_maps">Find a place on maps</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="place_image">Place Image</string>
    <string name="delete">Deleted</string>
    <string name="place_name">Pak Meng Beach</string>
    <string name="_4_5">4.5</string>
    <string name="location">Location</string>
    <string name="my_places">My Places</string>
    <string name="your_current_location">Location</string>
    <string name="close_button">Close</string>
    <string name="submit">Submit</string>
    <string name="rating_this_place">Rating this place!</string>
    <string name="hi_ninejoe">Hi Ninejoe</string>
</resources>