<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPlace"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/ivPlaceImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/place_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPlaceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/place_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/cvPlace"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:id="@+id/llRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/cvPlace"
            app:layout_constraintTop_toBottomOf="@id/tvPlaceName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp">

            <ImageView
                android:id="@+id/ivRating"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_5"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvPlaceLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="4dp"
            android:text="@string/location"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintStart_toEndOf="@id/cvPlace"
            app:layout_constraintTop_toBottomOf="@id/llRating"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_deleted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
