<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SettingsFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/txt_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivBack"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/urbanistbold"
        android:text="@string/settings"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/layout_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txt_settings"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txt_dark_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/urbanistmedium"
            android:text="@string/dark_mode"
            android:textSize="18sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:fontFamily="@font/urbanistsemibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
